fixed wrapping of list

--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -1,6 +1,6 @@
 
 .navLi{
-    display: inline;
+    display: inline-block;
     border: 5px solid white;
     }
 
